<resources>
    <!--App-->
    <string name="app_name">SafkaLog</string>
    <string name="app_welcomeMsg">
        Hello! and welcome to SafkaLog. SafkaLog is a small "no nonsense" kcal counter, with simple
        features. The reason you see this message is that you cleared the shared preferences, the
        save state is corrupted, or you are new user. Please enjoy the app!
    </string>

    <!--Shared-->
    <string name="sh_em_edit">&#128221;</string>
    <string name="sh_em_delete">&#128293;</string>
    <string name="sh_em_food">&#127849;</string>
    <string name="sh_em_drink">&#9749;</string>
    <string name="sh_em_recipe">&#128220;</string>

    <string name="sh_lb_toggle">Toggle</string>
    <string name="sh_lb_name">Name</string>
    <string name="sh_lb_kcal">Kcal</string>
    <string name="sh_lb_time">Time</string>
    <string name="sh_lb_grams">G/ml</string>
    <string name="sh_lb_type">Type</string>
    <string name="sh_lb_date">Date</string>
    <string name="sh_lb_kcalPer100Grams">Kcal/100g</string>
    <string name="sh_lb_set">Set</string>
    <string name="sh_btn_add">Add</string>

    <!--MainActivity-->
    <string name="ac_main_tv_todayTotalKcal">Today</string>
    <string name="ac_main_tv_totalKcalDummy">0.0</string>

    <string name="ac_main_btn_eat">Consume</string>
    <string name="ac_main_btn_ingredients">Ingredients</string>
    <string name="ac_main_btn_recipes">Recipes</string>
    <string name="ac_main_btn_diary">Diary</string>
    <string name="ac_main_btn_edit">Edit</string>

    <!--EatActivity-->
    <string name="ac_eat_nothingToConsume">Theres nothing to consume</string>

    <!--RecipesActivity-->
    <string name="sh_lb_kcalPer100gHint">How many kcal per 100g</string>
    <string name="sh_lb_ingredientNameHint">Name of ingredient</string>
    <string name="sh_lb_recipeHint">Name of the new recipe</string>
    <string name="sh_lb_gramHint">How many grams/ml</string>
    <string name="sh_lb_addIngredients">Add ingredients</string>
    <string name="sh_lb_currentIngredients">Current ingredients</string>
    <string name="sh_btn_finishRecipe">Finish recipe</string>
    <string name="ac_recipes_nothingToAdd">Theres nothing to add</string>

    <!--EditActivity-->
    <string name="ac_edit_lb_nothingToShow">Theres nothing to edit</string>

    <!--ConsumptionLimitActivity-->
    <string name="ac_consumptionLimit_lb_setLimit">Set kcal limit</string>
    <string name="ac_consumptionLimit_msg_activated">Consumption limiter is activated</string>
    <string name="ac_consumptionLimit_msg_deactivated">Consumption limiter is deactivated</string>

    <!--InputValidator-->
    <string name="inputValidator_err_int">The value has to be an integer</string>
    <string name="inputValidator_err_uInt">The value has to be an unsigned integer</string>

    <!--RecipeBookRecipe-->
    <string name="ac_recipeBookRecipe_lb_ingredients">Ingredients list</string>
</resources>