<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RecipesActivity">


    <TextView
        android:id="@+id/ac_addIngredients_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sh_lb_addIngredients"
        android:textSize="24sp"
        android:layout_margin="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/ac_recipe_lb_grams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sh_lb_grams"
        android:textSize="24sp"
        android:layout_margin="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ac_addIngredients_lb"/>

    <EditText
        android:id="@+id/ac_recipes_et_inputGrams"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/sh_lb_gramHint"
        android:layout_marginTop="56dp"

        app:layout_constraintStart_toEndOf="@+id/ac_recipe_lb_grams"
        app:layout_constraintTop_toBottomOf="@id/ac_addIngredients_lb"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/ac_addRecipeAndGoMain_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sh_btn_finishRecipe"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ac_ingredientsCatalog_rv"
        android:layout_width="407dp"
        android:layout_height="170dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ac_recipes_et_inputGrams" />

    <TextView
        android:id="@+id/ac_currentIngredients_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sh_lb_currentIngredients"
        android:textSize="24sp"
        android:layout_margin="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ac_ingredientsCatalog_rv"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ac_currentIngredients_rv"
        android:layout_width="407dp"
        android:layout_height="170dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ac_currentIngredients_lb"/>

    <TextView
        android:id="@+id/ac_recipe_lb_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sh_lb_name"
        android:textSize="24sp"
        android:layout_margin="16dp"

        app:layout_constraintTop_toBottomOf="@id/ac_currentIngredients_rv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ac_addRecipeAndGoMain_btn"/>

    <EditText
        android:id="@+id/ac_recipes_et_inputName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/sh_lb_recipeHint"

        app:layout_constraintTop_toBottomOf="@id/ac_currentIngredients_rv"
        app:layout_constraintStart_toEndOf="@id/ac_recipe_lb_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ac_addRecipeAndGoMain_btn"/>


</androidx.constraintlayout.widget.ConstraintLayout>