<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        android:text="@string/sh_lb_type"/>
    <TextView
        android:id="@+id/removable_eatable_tv_type"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        android:text="@string/sh_lb_name"/>
    <TextView
        android:id="@+id/removable_eatable_tv_name"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        android:text="@string/sh_lb_kcal"/>
    <TextView
        android:id="@+id/removable_eatable_tv_kcal"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

</LinearLayout>