<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EatActivity">

    <TextView
        android:id="@+id/ac_eat_tv_grams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/sh_lb_grams"
        android:textSize="24sp"

        android:layout_margin="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/ac_eat_et_grams"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/ac_eat_tv_grams"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ac_eat_ll_eatables"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="16dp"

        app:layout_constraintTop_toBottomOf="@id/ac_eat_et_grams"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/ac_eat_tv_type"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/sh_lb_type"
            android:textSize="24sp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/sh_lb_name"
            android:textSize="24sp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ac_eat_rv_eatables"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_margin="16dp"

        app:layout_constraintTop_toBottomOf="@id/ac_eat_ll_eatables"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>